--- a/src/my_param/agv1_param.yaml
+++ b/src/my_param/agv1_param.yaml
@@ -15,18 +15,18 @@ amcl:
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 2.0
-    laser_max_range: 12.0 #100.0
+    laser_max_range: 16.0 #100.0 12.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 2100
-    min_particles: 1500
+    max_particles: 2400
+    min_particles: 1300
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
-    resample_interval: 0.5
+    resample_interval: 1  
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
     sigma_hit: 0.2
@@ -125,8 +125,8 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5   #0.1  0.47 0.5
-      movement_time_allowance: 10.0
+      required_movement_radius: 0.1   #0.1  0.47 0.5 0.25
+      movement_time_allowance: 15.0
     # Goal checker parameters
     #precise_goal_checker:
     #  plugin: "nav2_controller::SimpleGoalChecker"
@@ -137,16 +137,17 @@ controller_server:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25 #0.25
-      yaw_goal_tolerance: 0.5
+      yaw_goal_tolerance: 0.25
+    
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.3
+      max_vel_x: 0.2
       max_vel_y: 0.0
-      max_vel_theta: 0.5  #1.5(7/2)
+      max_vel_theta: 0.4  #1.5(7/2)
       min_speed_xy: 0.0
       max_speed_xy: 0.7
       min_speed_theta: 0.0
@@ -169,8 +170,8 @@ controller_server:
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
+      critics: ["RotateToGoal", "Oscillation", "ObstacleFootprintCritic", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]  #ObstacleFootprintCritic BaseObstacle
+      ObstacleFootprintCritic.scale: 0.02
       PathAlign.scale: 32.0
       PathAlign.forward_point_distance: 0.1
       GoalAlign.scale: 24.0
@@ -184,8 +185,8 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0   #ここ変えるとローカルマップの更新早くなる？？
-      publish_frequency: 1.0  #上に同じ
+      update_frequency: 1.0   #ここ変えるとローカルマップの更新早くなる？？
+      publish_frequency: 1.0  #上に同じ 1.0
       global_frame: "odom"
       robot_base_frame: "base_link"
       use_sim_time: True
@@ -193,17 +194,17 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
+      #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
       #footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]"
       #footprint: "[ [0.15, 0.21], [0.15, -0.21], [-0.35, -0.21], [-0.35, 0.21]]"
       #footprint: "[ [0.1, 0.178], [0.15, -0.178], [-0.35, -0.178], [-0.35, 0.178]]"
-      #footprint: "[ [0.1, 0.1], [0.1, -0.1], [-0.1, -0.1], [-0.1, 0.1]]"
-      robot_radius: 0.175
+      footprint: "[ [0.1, 0.1], [0.1, -0.1], [-0.1, -0.1], [-0.1, 0.1]]"
+      #robot_radius: 0.175
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0  #3.0
-        inflation_radius: 0.2    #0.55
+        cost_scaling_factor: 0.7  #3.0
+        inflation_radius: 0.05    #0.55
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -242,7 +243,7 @@ global_costmap:
       #footprint: "[ [0.12, 0.36], [0.12, -0.0], [-0.32, -0.0], [-0.32, 0.36]]"
       #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
       #footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]" #追加
-      robot_radius: 0.175
+      #robot_radius: 0.175
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -265,8 +266,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0  #3.0
-        inflation_radius: 0.2   #0.55
+        cost_scaling_factor: 1.0  #3.0
+        inflation_radius: 0.1   #0.55
       always_send_full_costmap: True
 
 map_server:
@@ -351,13 +352,13 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.3, 0.0, 0.5]  #th=1.5(7/1) 1.2(7/2)
-    min_velocity: [0.0, 0.0, -0.5]
+    max_velocity: [0.2, 0.0, 0.4]  #th=1.5(7/1) 1.2(7/2)
+    min_velocity: [0.0, 0.0, -0.4]
     max_accel: [1.0, 0.0, 0.9] # th 3.2 2.2(7/1) 1.5(7/2)
     max_decel: [-1.0, 0.0, -0.9]
     odom_topic: "odom"
     odom_duration: 0.1
-    deadband_velocity: [0.2, 0.0, 0.4] #th=1.4(7/1) 0.8(7/2)
+    deadband_velocity: [0.15, 0.0, 0.3] #th=1.4(7/1) 0.8(7/2)
     velocity_timeout: 1.0
 
 lifecycle_manager:
