--- a/src/my_param/agv1_param.yaml
+++ b/src/my_param/agv1_param.yaml
@@ -31,9 +31,9 @@ amcl:
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
-    transform_tolerance: 1.0
-    update_min_a: 0.01 # 最小距離変化（メートル単位）
-    update_min_d: 0.01 # 最小角度変化（ラジアン単位）
+    transform_tolerance: 2.0
+    update_min_a: 0.1 # 最小距離変化（メートル単位）
+    update_min_d: 0.1 # 最小角度変化（ラジアン単位）
     z_hit: 0.5
     z_max: 0.05
     z_rand: 0.5
@@ -114,7 +114,7 @@ controller_server:
   ros__parameters:
     use_sim_time: True
     controller_frequency: 20.0
-    min_x_velocity_threshold: 0.001
+    min_x_velocity_threshold: 0.05
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
@@ -143,9 +143,9 @@ controller_server:
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.1
+      min_vel_x: 0.3
       min_vel_y: 0.0
-      max_vel_x: 0.5
+      max_vel_x: 0.7
       max_vel_y: 0.0
       max_vel_theta: 1.0  #1.5(7/2)
       min_speed_xy: 0.0
@@ -153,9 +153,9 @@ controller_server:
       min_speed_theta: 0.5
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 0.7
+      acc_lim_x: 1.0
       acc_lim_y: 0.0
-      acc_lim_theta: 0.7  #1.5
+      acc_lim_theta: 1.5  #1.5
       decel_lim_x: -0.5
       decel_lim_y: 0.0
       decel_lim_theta: -3.0
@@ -185,8 +185,8 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 1.0   #ここ変えるとローカルマップの更新早くなる？？
-      publish_frequency: 1.0  #上に同じ 1.0
+      update_frequency: 5.0   #ここ変えるとローカルマップの更新早くなる？？
+      publish_frequency: 5.0  #上に同じ 1.0
       global_frame: "odom"
       robot_base_frame: "base_link"
       use_sim_time: True
@@ -239,10 +239,11 @@ global_costmap:
       global_frame: "map"
       robot_base_frame: "base_link"
       use_sim_time: True
-      footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
+      #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
       #footprint: "[ [0.12, 0.36], [0.12, -0.0], [-0.32, -0.0], [-0.32, 0.36]]"
       #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
       #footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]" #追加
+      footprint: "[ [0.1, 0.1], [0.1, -0.1], [-0.1, -0.1], [-0.1, 0.1]]"
       #robot_radius: 0.175
       resolution: 0.05
       track_unknown_space: true
@@ -327,8 +328,8 @@ behavior_server:
     transform_tolerance: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
-    max_rotational_vel: 0.0 #1.0
-    min_rotational_vel: 0.0
+    max_rotational_vel: 0.33 #1.0
+    min_rotational_vel: 0.11
     rotational_acc_lim: 0.0
 
 robot_state_publisher:
@@ -352,9 +353,9 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 1.0]  #th=1.5(7/1) 1.2(7/2)
-    min_velocity: [0.1, 0.0, 0.0]
-    max_accel: [0.7, 0.0, 0.7] # th 3.2 2.2(7/1) 1.5(7/2)
+    max_velocity: [0.7, 0.0, 1.0]  #th=1.5(7/1) 1.2(7/2)
+    min_velocity: [0.0, 0.0, 0.0]
+    max_accel: [1.0, 0.0, 1.5] # th 3.2 2.2(7/1) 1.5(7/2)
     max_decel: [-1.0, 0.0, -3.0]
     odom_topic: "odom"
     odom_duration: 0.1
