--- a/src/my_param/agv1_param.yaml
+++ b/src/my_param/agv1_param.yaml
@@ -1,13 +1,13 @@
 amcl:
   ros__parameters:
-    queue_size: 101   #追加
+    queue_size: 100   #追加
     use_sim_time: True
     alpha1: 0.2
     alpha2: 0.2
     alpha3: 0.2
     alpha4: 0.2
     alpha5: 0.2
-    base_frame_id: "base_link"
+    base_frame_id: "base_footprint"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
@@ -15,25 +15,25 @@ amcl:
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 2.0
-    laser_max_range: 16.0 #100.0 12.0
+    laser_max_range: 12.0 #100.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 2400
-    min_particles: 1300
+    max_particles: 2100
+    min_particles: 1500
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
-    resample_interval: 1  
+    resample_interval: 1
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
-    transform_tolerance: 2.0
-    update_min_a: 0.1 # 最小距離変化（メートル単位）
-    update_min_d: 0.1 # 最小角度変化（ラジアン単位）
+    transform_tolerance: 1.0
+    update_min_a: 0.01
+    update_min_d: 0.01
     z_hit: 0.5
     z_max: 0.05
     z_rand: 0.5
@@ -114,7 +114,7 @@ controller_server:
   ros__parameters:
     use_sim_time: True
     controller_frequency: 20.0
-    min_x_velocity_threshold: 0.05
+    min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
     failure_tolerance: 0.3
@@ -125,8 +125,8 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.1   #0.1  0.47 0.5 0.25
-      movement_time_allowance: 15.0
+      required_movement_radius: 0.65   #0.1  0.47 0.5
+      movement_time_allowance: 10.0
     # Goal checker parameters
     #precise_goal_checker:
     #  plugin: "nav2_controller::SimpleGoalChecker"
@@ -136,75 +136,73 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25 #0.25
-      yaw_goal_tolerance: 0.25
-    
+      xy_goal_tolerance: 0.3 #0.25 0.05
+      yaw_goal_tolerance: 0.2
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.3
+      min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.7
+      max_vel_x: 0.3
       max_vel_y: 0.0
       max_vel_theta: 1.0  #1.5(7/2)
       min_speed_xy: 0.0
-      max_speed_xy: 0.0
-      min_speed_theta: 0.5
+      max_speed_xy: 0.7
+      min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
       acc_lim_x: 1.0
       acc_lim_y: 0.0
       acc_lim_theta: 1.5  #1.5
-      decel_lim_x: -0.5
+      decel_lim_x: -1.0
       decel_lim_y: 0.0
-      decel_lim_theta: -3.0
+      decel_lim_theta: -1.5
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
-      sim_time: 4.0
-      linear_granularity: 0.4
-      angular_granularity: 0.1
+      sim_time: 1.7
+      linear_granularity: 0.05
+      angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.25
+      xy_goal_tolerance: 0.1
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "ObstacleFootprintCritic", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]  #ObstacleFootprintCritic BaseObstacle
-      ObstacleFootprintCritic.scale: 0.02
-      PathAlign.scale: 32.0
+      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      BaseObstacle.scale: 0.02
+      PathAlign.scale: 20.0
       PathAlign.forward_point_distance: 0.1
       GoalAlign.scale: 24.0
       GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
+      PathDist.scale: 20.0
       GoalDist.scale: 24.0
-      RotateToGoal.scale: 32.0
+      RotateToGoal.scale: 20.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
 
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0   #ここ変えるとローカルマップの更新早くなる？？
-      publish_frequency: 5.0  #上に同じ 1.0
-      global_frame: "odom"
-      robot_base_frame: "base_link"
+      update_frequency: 5.0
+      publish_frequency: 2.0
+      global_frame: odom
+      robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
       width: 3
       height: 3
       resolution: 0.05
-      footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
-      #footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]"
+      footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]"
       #footprint: "[ [0.15, 0.21], [0.15, -0.21], [-0.35, -0.21], [-0.35, 0.21]]"
       #footprint: "[ [0.1, 0.178], [0.15, -0.178], [-0.35, -0.178], [-0.35, 0.178]]"
       #footprint: "[ [0.1, 0.1], [0.1, -0.1], [-0.1, -0.1], [-0.1, 0.1]]"
-      #robot_radius: 0.175
+      robot_radius: 0.175
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 0.7  #3.0
-        inflation_radius: 0.05    #0.55
+        cost_scaling_factor: 1.0  #1.0
+        inflation_radius: 0.35    #0.1
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -234,17 +232,13 @@ global_costmap:
   global_costmap:
     ros__parameters:
       transform_tolerance: 0.5  # トランスフォームの許容時間を0.5秒
-      update_frequency: 1.0   #グローバルマップの更新頻度？？
-      publish_frequency: 1.0  #上に同じ？？
-      global_frame: "map"
-      robot_base_frame: "base_link"
+      update_frequency: 1.0
+      publish_frequency: 1.0
+      global_frame: map
+      robot_base_frame: base_link
       use_sim_time: True
-      #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
-      #footprint: "[ [0.12, 0.36], [0.12, -0.0], [-0.32, -0.0], [-0.32, 0.36]]"
-      #footprint: "[ [0.12, 0.18], [0.12, -0.18], [-0.32, -0.18], [-0.32, 0.18]]"
-      #footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]" #追加
-      footprint: "[ [0.1, 0.1], [0.1, -0.1], [-0.1, -0.1], [-0.1, 0.1]]"
-      #robot_radius: 0.175
+      footprint: "[ [0.141, 0.2], [0.141, -0.2], [-0.339, -0.2], [-0.339, 0.2]]" #追加
+      robot_radius: 0.175
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -267,8 +261,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 1.0  #3.0
-        inflation_radius: 0.1   #0.55
+        cost_scaling_factor: 3.0  #3.0 2.0 1.5
+        inflation_radius: 0.65   #0.55 0.25 0.47
       always_send_full_costmap: True
 
 map_server:
@@ -281,7 +275,7 @@ map_server:
 map_saver:
   ros__parameters:
     use_sim_time: True
-    save_map_timeout: 2.0 #5.0
+    save_map_timeout: 5.0
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
     map_subscribe_transient_local: True
@@ -328,9 +322,9 @@ behavior_server:
     transform_tolerance: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
-    max_rotational_vel: 0.33 #1.0
-    min_rotational_vel: 0.11
-    rotational_acc_lim: 0.0
+    max_rotational_vel: 1.0 #1.0
+    min_rotational_vel: 0.8
+    rotational_acc_lim: 1.0
 
 robot_state_publisher:
   ros__parameters:
@@ -353,13 +347,13 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.7, 0.0, 1.0]  #th=1.5(7/1) 1.2(7/2)
-    min_velocity: [0.0, 0.0, 0.0]
+    max_velocity: [0.3, 0.0, 1.0]  #th=1.5(7/1) 1.2(7/2)
+    min_velocity: [0.0, 0.0, -1.0]
     max_accel: [1.0, 0.0, 1.5] # th 3.2 2.2(7/1) 1.5(7/2)
-    max_decel: [-1.0, 0.0, -3.0]
+    max_decel: [-1.0, 0.0, -1.5]
     odom_topic: "odom"
     odom_duration: 0.1
-    deadband_velocity: [0.2, 0.0, 0.3] #th=1.4(7/1) 0.8(7/2)
+    deadband_velocity: [0.2, 0.0, 0.8] #th=1.4(7/1) 0.8(7/2)
     velocity_timeout: 1.0
 
 lifecycle_manager:
