--- a/src/myagv_navigation/map/demo0725_map.yaml
+++ b/src/myagv_navigation/map/demo0725_map.yaml
@@ -1,7 +1,7 @@
-image: map_1718364393.pgm
+image: demo0725_map.pgm
 mode: trinary
 resolution: 0.05
-origin: [-1.68, -4.37, 0]
+origin: [-7.3, -9.64, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
