--- a/src/myagv_navigation/config/agv1_param.yaml
+++ b/src/myagv_navigation/config/agv1_param.yaml
@@ -114,9 +114,9 @@ controller_server:
   ros__parameters:
     use_sim_time: True
     controller_frequency: 20.0
-    min_x_velocity_threshold: 0.001
+    min_x_velocity_threshold: 0.0001 #0.001
     min_y_velocity_threshold: 0.5
-    min_theta_velocity_threshold: 0.001
+    min_theta_velocity_threshold: 0.0001
     failure_tolerance: 0.3
     progress_checker_plugin: "progress_checker"
     goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
@@ -136,28 +136,28 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.3 #0.25 0.05
-      yaw_goal_tolerance: 0.2
+      xy_goal_tolerance: 0.6 #0.4
+      yaw_goal_tolerance: 1.0 #0.2
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.3
+      max_vel_x: 0.3 #0.3
       max_vel_y: 0.0
-      max_vel_theta: 1.0  #1.5(7/2)
+      max_vel_theta: 1.0  #1.0
       min_speed_xy: 0.0
       max_speed_xy: 0.7
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 1.0
+      acc_lim_x: 1.5  #1.0
       acc_lim_y: 0.0
-      acc_lim_theta: 1.5  #1.5
-      decel_lim_x: -1.0
+      acc_lim_theta: 2.5  #1.5
+      decel_lim_x: -1.5 #-1.0
       decel_lim_y: 0.0
-      decel_lim_theta: -1.5
+      decel_lim_theta: -2.5 #-1.5
       vx_samples: 20
       vy_samples: 5
       vtheta_samples: 20
@@ -165,19 +165,19 @@ controller_server:
       linear_granularity: 0.05
       angular_granularity: 0.025
       transform_tolerance: 0.2
-      xy_goal_tolerance: 0.1
+      xy_goal_tolerance: 0.6
       trans_stopped_velocity: 0.25
       short_circuit_trajectory_evaluation: True
       stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
       BaseObstacle.scale: 0.02
-      PathAlign.scale: 20.0
+      PathAlign.scale: 32.0
       PathAlign.forward_point_distance: 0.1
       GoalAlign.scale: 24.0
       GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 20.0
+      PathDist.scale: 32.0
       GoalDist.scale: 24.0
-      RotateToGoal.scale: 20.0
+      RotateToGoal.scale: 32.0
       RotateToGoal.slowing_factor: 5.0
       RotateToGoal.lookahead_time: -1.0
 
@@ -202,7 +202,7 @@ local_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 1.0  #1.0
-        inflation_radius: 0.35    #0.1
+        inflation_radius: 0.4    # 0.35
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -347,13 +347,13 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.3, 0.0, 1.0]  #th=1.5(7/1) 1.2(7/2)
-    min_velocity: [0.0, 0.0, -1.0]
-    max_accel: [1.0, 0.0, 1.5] # th 3.2 2.2(7/1) 1.5(7/2)
-    max_decel: [-1.0, 0.0, -1.5]
+    max_velocity: [0.3, 0.0, 1.0]  #[0.3, 0.0, 1.0]
+    min_velocity: [0.0, 0.0, -1.0]  #[0.0, 0.0, -1.0]
+    max_accel: [1.5, 0.0, 2.5] # [1.0, 0.0, 1.5]
+    max_decel: [-1.5, 0.0, -2.5]  #[-1.0, 0.0, -1.5]
     odom_topic: "odom"
     odom_duration: 0.1
-    deadband_velocity: [0.2, 0.0, 0.8] #th=1.4(7/1) 0.8(7/2)
+    deadband_velocity: [0.2, 0.0, 0.8] #[0.2, 0.0, 0.8]
     velocity_timeout: 1.0
 
 lifecycle_manager:
