--- a/src/myagv_navigation/map/new_map_1.yaml
+++ b/src/myagv_navigation/map/new_map_1.yaml
@@ -1,7 +1,7 @@
-image: new_map.pgm
+image: new_map_1.pgm
 mode: trinary
 resolution: 0.05
-origin: [-9.8, 0.0456, 0]
+origin: [-10, -0.0022, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.25
