--- a/src/myagv_description/package.xml
+++ b/src/myagv_description/package.xml
@@ -14,6 +14,7 @@
   <depend>serial</depend>
   <depend>threading</depend>
   <depend>time</depend>
+  <depend>tf2_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
